--- a/src/main/resources/static/scss/theme/_home.scss
+++ b/src/main/resources/static/scss/theme/_home.scss
@@ -514,7 +514,7 @@
 
 //--------- end related product  -------------//
 
-//----------- Strat 02-11 Product Details ----------//
+//----------- Strat 02-11 ProductInfo Details ----------//
 .details-tab-navigation {
 	background: #f9fafc;
 	.nav-tabs {
