--- a/src/main/resources/static/scss/theme/_common.scss
+++ b/src/main/resources/static/scss/theme/_common.scss
@@ -1224,7 +1224,7 @@
 
 //--------- End Filter Bar -----------//
 
-//---------- Start Single Product List View ----------//
+//---------- Start Single ProductInfo List View ----------//
 .single-organic-product-list {
 	padding: 30px 0;
 	@include transition();
@@ -1367,7 +1367,7 @@
 		}
 	}
 }
-//---------- End Single Product List View ----------//
+//---------- End Single ProductInfo List View ----------//
 //--------- Start Sidebar Category Dropdown ---------//
 .sidebar-categories {
 	.head {
@@ -1411,7 +1411,7 @@
 }
 //--------- End Sidebar Category Dropdown ---------//
 
-//--------- Start Product Filter ---------//
+//--------- Start ProductInfo Filter ---------//
 
 .sidebar-filter {
 	margin-top: 50px;
@@ -1554,7 +1554,7 @@
 }
 
 
-//--------- End Product Filter ---------//
+//--------- End ProductInfo Filter ---------//
 
 //--------- Start Price Range Area noUiSlider ----------//
 .price-range-area {
