--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7957,3 +7957,33 @@ label {
         min-width: 280px;
     }
 }
+
+/*Error area*/
+.error_area{
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+    height: 100vh;
+}
+.error_area h1{
+    display:block;
+    font-size: 36px;
+
+}
+.error_area h4{
+    display:block;
+    font-size:20px;
+    font-weight: normal;
+}
+.error_area .return_home{
+    margin: 20px;
+    padding:10px 25px;
+    color:white;
+    text-decoration:none;
+    background-color:#ff6c00;
+    transition: all 0.2s;
+}
+.error_area .return_home:hover{
+    background-color:#ffba00;
+}
