--- a/src/main/resources/templates/shared/_layout.html
+++ b/src/main/resources/templates/shared/_layout.html
@@ -49,12 +49,12 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                                aria-expanded="false">Sản phẩm &nbsp;<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link" href="#">Acoustic Guitars</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Classic Guitars</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#}">Guitars có EQ</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/danh-sach">Acoustic Guitars</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/danh-sach">Classic Guitars</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/danh-sach}">Guitars có EQ</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="#">Liên hệ</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/lien-he">Liên hệ</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Giới thiệu</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
@@ -71,8 +71,8 @@
                             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                                aria-expanded="false"><span class="fa fa-user"></span></a>
                             <ul class="dropdown-menu">
-                                <li class="nav-item user_name"><a class="nav-link" href="#">Đăng nhập</a></li>
-                                <li class="nav-item"><a class="nav-link" href="#">Đăng kí</a></li>
+                                <li class="nav-item user_name"><a class="nav-link" href="/dang-nhap">Đăng nhập</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/dang-ki">Đăng kí</a></li>
                             </ul>
                         </li>
                     </ul>
