--- a/src/main/resources/static/scss/theme/_product.scss
+++ b/src/main/resources/static/scss/theme/_product.scss
@@ -1,4 +1,4 @@
-/* Feature ProductInfo Area css
+/* Feature Product Area css
 ============================================================================================ */
 .feature_product_area{
 	.main_box{
@@ -139,10 +139,10 @@
 .latest_product_inner{
 	margin-bottom: -35px;
 }
-/* End Feature ProductInfo Area css
+/* End Feature Product Area css
 ============================================================================================ */
 
-/* End Feature ProductInfo Area css
+/* End Feature Product Area css
 ============================================================================================ */
 .most_product_area{
 	.main_box{
@@ -182,10 +182,10 @@
 		}
 	}
 }
-/* End Feature ProductInfo Area css
+/* End Feature Product Area css
 ============================================================================================ */
 
-/* ProductInfo Sidebar Area css
+/* Product Sidebar Area css
 ============================================================================================ */
 .cat_product_area{
 	.latest_product_inner{
@@ -464,10 +464,10 @@
 	padding-bottom: 120px;
 }
 
-/* End ProductInfo Sidebar Area css
+/* End Product Sidebar Area css
 ============================================================================================ */
 
-/* Single ProductInfo Area css
+/* Single Product Area css
 ============================================================================================ */
 .product_image_area{
 	padding-top: 120px;
@@ -868,7 +868,7 @@
 }
 
 
-/* End Single ProductInfo Area css
+/* End Single Product Area css
 ============================================================================================ */
 
 /* Cart Area css
