--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -13,13 +13,13 @@
 
 <body>
 
-<h2>Accounts</h2>
+<h2>Product List</h2>
 
 <table border="1">
     <tr>
         <th>ID</th>
-        <th>Full Name</th>
-        <th>Balance</th>
+        <th>Name</th>
+        <th>Price</th>
     </tr>
     <tr th:each="p : ${productList}">
         <td th:utext="${p.id}">..</td>
