--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@
     <title>Guitar Shop</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="/css/linearicons.css" type="text/css">
+    <link rel="stylesheet" href="/css/linearicons.css" th:href="@{/css/linearicons.css}" type="text/css">
     <link rel="stylesheet" href="/css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="/css/themify-icons.css" type="text/css">
     <link rel="stylesheet" href="/css/bootstrap.css" type="text/css">
