--- a/src/main/resources/templates/cart/cart-detail.html
+++ b/src/main/resources/templates/cart/cart-detail.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html class="no-js"
-      xmlns:th="http://www.thymeleaf.org"
       th:replace="~{/shared/_layout :: main-fragment(
                                                 ~{::title},
                                                 ~{:: #main-content}
-                                               )}"> 
+                                               )}"
+      xmlns:th="http://www.thymeleaf.org"> 
 <head>
         <title>Chi tiết giỏ hàng - Guitar Shop</title>
 </head>
@@ -25,95 +25,116 @@
     <section class="cart_area">
         <div class="container">
             <div class="cart_inner">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                        <tr>
-                            <th scope="col">Sản phẩm</th>
-                            <th scope="col">Đơn giá</th>
-                            <th scope="col">Số lượng</th>
-                            <th scope="col">Thành tiền</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-
-                        <tr>
-                            <td>
-                                <div class="media">
-                                    <img alt="" class="img-fluid" th:src="@{/img/logo.png}">
-
-                                    <div class="media-body">
-                                        <a href="#">
-                                            <h5>Guitar 123</h5>
-                                        </a>
-                                        <a class="delete_item" href="#">Xoá</a>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <h5>2.700.000đ</h5>
-
-                                <span class="l-through">3.000.000đ</span>
-                                <span> | -10%</span>
-
-                            </td>
-                            <td>
-                                <div class="product_count">
-                                    <input class="input-text quantity_text" maxlength="12" id="sst" name="qty" type="text" value="1">
-                                    <button class="increase items-count"
-                                            onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;" type="button">
-                                        <i class="lnr lnr-chevron-up"></i>
-                                    </button>
-                                    <button class="reduced items-count"
-                                            onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )&& sst > 1 ) result.value--;return false;" type="button">
-                                        <i class="lnr lnr-chevron-down"></i>
-                                    </button>
-                                </div>
-                            </td>
-                            <td>
-                                <div class="total">
-                                    <h5>2.700.000đ</h5>
-                                </div>
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <hr/>
-                <div class="bottom_button row justify-content-end">
-                    <h5>Tạm tính: 2.700.000đ</h5>
-                </div>
-                <div class="bottom_button row justify-content-end">
-                    <h5>Giảm giá: -300.000đ</h5>
-                </div>
-                <div class="bottom_button row justify-content-end">
-                    <div class="cupon_text d-flex align-items-center">
-                       <input id = "discount_text" type = "text" placeholder = "Mã giảm giá">
-                        <button class="gray_btn" id="apply_code" type="submit">Áp dụng</button>
+                <th:block th:if="${session.sessionCart}!=null">
+                    <div class="table-responsive">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col">Sản phẩm</th>
+                                <th scope="col">Đơn giá</th>
+                                <th scope="col">Số lượng</th>
+                                <th scope="col">Thành tiền</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <th:block th:each="item:${session.sessionCart}">
+                                <tr th:with="product=${item.getValue().getProduct()}, quantity=${item.getValue().getQuantity()}">
+                                    <th:block th:with="discountPrice=${product.getPrice()}*(100-${product.getDiscountAmount()})/100">
+                                        <td>
+                                            <div class="media">
+                                                <img alt="" class="img-fluid" th:src="${product.getImageThumbnail()}">
+                                                <div class="media-body">
+                                                    <a href="#">
+                                                        <h5 th:text="${product.getName()}"></h5>
+                                                    </a>
+                                                    <a class="delete_item" th:href="@{/remove-from-cart(productId=${product.getId()})}">Xoá</a>
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <h5 th:text="${#numbers.formatDecimal(discountPrice,0,'POINT',0,'COMMA')+'đ'}"></h5>
+                                            <th:block  th:if="${product.getDiscountAmount()}>0">
+                                            <span class="l-through"
+                                                  th:text="${#numbers.formatDecimal(product.getPrice(),0,'POINT',0,'COMMA')+'đ'}"></span>
+                                                <span> | -[[${product.getDiscountAmount()}]]%</span>
+                                            </th:block>
+                                        </td>
+                                        <td>
+                                            <div class="product_count">
+                                                <input type="text" name="qty" th:data-id="${product.getId()}" th:id="${product.getId()}" maxlength="12" th:value="${quantity}"
+                                                       class="input-text quantity_text">
+                                                <button th:attr="onclick=|changeQuantity(${product.getId()},true)|"
+                                                        class="increase items-count" type="button">
+                                                    <i class="lnr lnr-chevron-up"></i>
+                                                </button>
+                                                <button th:attr="onclick=|changeQuantity(${product.getId()},false)|"
+                                                        class="reduced items-count" type="button">
+                                                    <i class="lnr lnr-chevron-down"></i>
+                                                </button>
+                                                <script>
+                                                    function changeQuantity(id, isIncreasing){
+                                                        var result=document.getElementById(id.toString());
+                                                        var sst=result.value;
+                                                        if(isIncreasing==true){
+                                                            if( !isNaN( sst )) {
+                                                                result.value++;
+                                                            }
+                                                        }else{
+                                                            if( !isNaN( sst )&& sst > 1 ) {
+                                                                result.value--;
+                                                            }
+                                                        }
+                                                    }
+                                                </script>
+                                            </div>
+                                        </td>
+                                        <td>
+                                            <div class="total">
+                                                <h5 th:text="${#numbers.formatDecimal(discountPrice*quantity,0,'POINT',0,'COMMA')+'đ'}"></h5>
+                                            </div>
+                                        </td>
+                                    </th:block>
+                                </tr>
+                            </th:block>
+                            </tbody>
+                        </table>
                     </div>
-                </div>
-                <div class="bottom_button row justify-content-end align-items-center">
-                    <div class="applied_code">
-                        <span class="applied_code">QTTN19</span>
-                        <a href="#" id="delete_discount_code" title="Xoá mã giảm giá"><i class="ti-close"></i></a>
+                    <hr/>
+                    <div class="bottom_button row justify-content-end">
+                        <h5>Tạm tính: [[${#numbers.formatDecimal(session.sessionCartTotal,0,'POINT',0,'COMMA')+'đ'}]]</h5>
                     </div>
-                </div>
-                <div class="total_price row justify-content-end align-items-center">
-                    <h5>Tổng cộng: </h5>
-                    <h2 id="total_number">2.500.000đ</h2>
-                </div>
-                <div class="out_button_area row justify-content-end">
-                    <div class="checkout_btn_inner d-flex align-items-center">
-                        <a class="gray_btn" href="/">Tiếp tục mua hàng</a>
-                        <a class="primary-btn" href="#">Thanh toán</a>
+                    <div class="bottom_button row justify-content-end">
+                        <h5>Giảm giá: -300.000đ</h5>
                     </div>
-                </div>
-
-                <div class="justify-content-center">
-                    <p>Không có sản phẩm nào trong giỏ hàng của bạn. </p>
-                    <a class="primary-btn" href="/">Về trang chủ</a>
-                </div>
-
+                    <div class="bottom_button row justify-content-end">
+                        <div class="cupon_text d-flex align-items-center">
+                            <input id="discount_text" placeholder="Mã giảm giá" type="text">
+                            <button class="gray_btn" id="apply_code" type="submit">Áp dụng</button>
+                        </div>
+                    </div>
+                    <div class="bottom_button row justify-content-end align-items-center">
+                        <div class="applied_code">
+                            <span class="applied_code">QTTN19</span>
+                            <a href="#" id="delete_discount_code" title="Xoá mã giảm giá"><i class="ti-close"></i></a>
+                        </div>
+                    </div>
+                    <div class="total_price row justify-content-end align-items-center">
+                        <h5>Tổng cộng: </h5>
+                        <h2 id="total_number">2.500.000đ</h2>
+                    </div>
+                    <div class="out_button_area row justify-content-end">
+                        <div class="checkout_btn_inner d-flex align-items-center">
+                            <a class="gray_btn" href="/">Tiếp tục mua hàng</a>
+                            <a class="primary-btn" href="#">Thanh toán</a>
+                        </div>
+                    </div>
+                </th:block>
+                <th:block th:if="${session.sessionCart}==null">
+                    <div class="justify-content-center">
+                        <p>Không có sản phẩm nào trong giỏ hàng của bạn. </p>
+                        <a class="primary-btn" href="/">Về trang chủ</a>
+                    </div>
+                </th:block>
             </div>
         </div>
     </section>
