--- a/src/main/resources/templates/shared/_layout.html
+++ b/src/main/resources/templates/shared/_layout.html
@@ -51,9 +51,9 @@
                                aria-haspopup="true"
                                aria-expanded="false">Sản phẩm &nbsp;<i class="fa fa-angle-down"></i></a>
                             <ul class="dropdown-menu">
-                                <li class="nav-item"><a class="nav-link" href="/danh-sach">Acoustic Guitars</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/danh-sach">Classic Guitars</a></li>
-                                <li class="nav-item"><a class="nav-link" href="/danh-sach}">Guitars có EQ</a></li>
+                                <li class="nav-item"><a class="nav-link" th:href="@{~/san-pham/acoustic-guitars}">Acoustic Guitars</a></li>
+                                <li class="nav-item"><a class="nav-link" th:href="@{~/san-pham/classic-guitars}">Classic Guitars</a></li>
+                                <li class="nav-item"><a class="nav-link" th:href="@{~/san-pham/guitars-with-eq}">Guitars có EQ</a></li>
                             </ul>
                         </li>
                         <li class="nav-item"><a class="nav-link" href="/lien-he">Liên hệ</a></li>
