--- a/src/main/resources/templates/home/index.html
+++ b/src/main/resources/templates/home/index.html
@@ -115,7 +115,7 @@
                                         </th:block>
                                     </div>
                                     <div class="prd-bottom card_area">
-                                        <a class="primary-btn" th:href="@{/add-to-cart(productId=${item.id})}">Thêm vào giỏ</a>
+                                        <a class="primary-btn" th:href="@{/add-to-cart(productId=${item.id}, quantity=1)}">Thêm vào giỏ</a>
                                     </div>
                                 </div>
                             </div>
@@ -152,7 +152,7 @@
                                         </th:block>
                                     </div>
                                     <div class="prd-bottom card_area">
-                                        <a class="primary-btn" th:href="@{/add-to-cart(productId=${item.id})}">Thêm vào giỏ</a>
+                                        <a class="primary-btn" th:href="@{/add-to-cart(productId=${item.id}, quantity=1)}">Thêm vào giỏ</a>
                                     </div>
                                 </div>
                             </div>
