--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -35,10 +35,10 @@
                         <h3>Đăng nhập</h3>
                         <div class="row login_form">
                             <div class="col-md-12 form-group">
-                                <input class="form-control" placeholder="Email" type="email">
+                                <input class="form-control" placeholder="Email" type="email" id="email" name="email">
                             </div>
                             <div class="col-md-12 form-group">
-                                <input class="form-control" placeholder="Mật khẩu" type="password">
+                                <input class="form-control" placeholder="Mật khẩu" type="password" id="password" name="password">
                             </div>
                             <div class="col-md-12 form-group forgot_password">
                                 <div class="row remember_me">
@@ -48,10 +48,10 @@
                                 <a href="#">Quên mật khẩu?</a>
                             </div>
                             <div class="col-md-12 form-group">
-                                <button class="primary-btn" type="submit">Đăng nhập</button>
+                                <button class="primary-btn" name="Submit" value="Login" type="Submit" >Đăng nhập</button>
                             </div>
                             <div class="col-md-12 form-group register">
-                                <span class="">Chưa có tài khoản? <a href="#">Đăng kí ngay</a></span>
+                                <span class="">Chưa có tài khoản? <a th:action="@{/registration}" method="get">Đăng kí ngay</a></span>
                             </div>
                         </div>
                     </div>
